[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui_elements/font/Title_Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/failscreen/FailScreen.gd" type="Script" id=2]
[ext_resource path="res://ui_elements/font/Menu_Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui_elements/BG_Panel.tres" type="StyleBox" id=4]
[ext_resource path="res://ui_elements/Button_Style.tres" type="StyleBox" id=5]
[ext_resource path="res://ui_elements/MenuBG.tscn" type="PackedScene" id=6]

[node name="PanelContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 1 )
text = "Du wurdest Besiegt"
align = 1

[node name="MenuBG" parent="MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 130.0
margin_right = 1820.0
margin_bottom = 324.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MenuBG"]
margin_right = 1820.0
margin_bottom = 194.0

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer/MenuBG/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Score:"
align = 1

[node name="Highscore" type="Label" parent="MarginContainer/VBoxContainer/MenuBG/VBoxContainer"]
margin_top = 99.0
margin_right = 1820.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 3 )
text = "Highscore:"
align = 1

[node name="MenuBG2" parent="MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 344.0
margin_right = 1820.0
margin_bottom = 980.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MenuBG2"]
margin_right = 1820.0
margin_bottom = 636.0
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MenuBG2/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1790.0
margin_bottom = 606.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="restart" type="Button" parent="MarginContainer/VBoxContainer/MenuBG2/MarginContainer/VBoxContainer"]
margin_right = 1760.0
margin_bottom = 178.0
size_flags_vertical = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Neustarten"

[node name="titlescreen" type="Button" parent="MarginContainer/VBoxContainer/MenuBG2/MarginContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 1760.0
margin_bottom = 376.0
size_flags_vertical = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Zur√ºck zu Startbildschirm"

[node name="close" type="Button" parent="MarginContainer/VBoxContainer/MenuBG2/MarginContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 1760.0
margin_bottom = 576.0
size_flags_vertical = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 3 )
text = "Spiel Beenden"
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuBG2/MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuBG2/MarginContainer/VBoxContainer/titlescreen" to="." method="_on_titlescreen_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuBG2/MarginContainer/VBoxContainer/close" to="." method="_on_close_pressed"]
